bugs fix,admin added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<html lang="zxx" class="no-js">
 	<head>
 		<!-- Mobile Specific Meta -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
 		<!-- Favicon-->
 		<link rel="shortcut icon" href="img/fav.png">
 		<!-- Author Meta -->
@@ -15,6 +15,7 @@
 		<meta charset="UTF-8">
 		<!-- Site Title -->
 		<title>Iugale Services Pvt Ltd</title>
+
 
 		
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r77/three.min.js'></script>
@@ -36,10 +37,11 @@
 			<link rel="stylesheet" href="css/style.css">
 			<link rel="stylesheet" href="css/nucleo-icons.css">
 		
-
+				
 			
 		</head>
 		<body>	
+				
 			  <header id="header" id="home">
 			    <div class="container main-menu">
 			    	<div class="row align-items-center justify-content-between d-flex">
