--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Iugale Services Pvt Ltd</title>
+		<title>Iugale Tech</title>
 
 
 		
