--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
 										<input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mb-20 form-control" required="" type="email">
 
 										<input name="subject" placeholder="Enter your subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your subject'" class="common-input mb-20 form-control" required="" type="text">
-										<select name="typeofservice" class="common-input mb-20 form-control" required="" >
+										<select name="typeofservice" class="form-select form-control" required="" >
 											<option value="" disabled selected>Select Type of Service</option>
 											<option value="Software Development">Software Development</option>
 											<option value="Sales">Sales</option>
