--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								IUGALE Services Pvt Ltd		
 							</h1>
 							
-							<a href="#" class="primary-btn header-btn text-uppercase">Get Started</a>
+							<a href="contact.html" class="primary-btn header-btn text-uppercase">Get Started</a>
 						</div>												
 					</div>
 				</div>
@@ -139,16 +139,16 @@
 							<a class="primary-btn" href="#">Get Started Now</a>
 						</div>
 						<div class="col-lg-4 col-md-12 home-about-right relative">
-							<form class="form-wrap" action="#">
+							<form class="form-wrap" action="mail.php">
 								<h4 class="text-white pb-20">Request a Quote</h4>
-								<div class="form-select" id="service-select"">
-									<select>
-										<option value="1">Select Service</option>
-										<option value="2">Service One</option>
-										<option value="3">Service Two</option>
-										<option value="4">Service Three</option>
-										<option value="5">Service Four</option>
-									</select>
+								<div class="form-select" id="service-select">
+										<option value="" disabled selected>Select Type of Service</option>
+										<option value="Software Development">Software Development</option>
+										<option value="Sales">Sales</option>
+										<option value="Marketing">Marketing</option>
+										<option value="Advertising">Advertising</option>
+										<option value="Market Research">Market Research</option>
+										<option value="Other">Other</option>
 								</div>								
 								<input type="text" class="form-control" placeholder="name">
 								<input type="phone" class="form-control" placeholder="Phone Number">
