--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
 		</head>
 		<body>	
 			    <div class="container main-menu">
-			    	<div class="row align-items-center justify-content-between d-flex">
-				      <div id="logo">
+			    	<div class="row align-items-center justify-content-between d-flex" >
+				      <div id="logo" style="padding-bottom:20px;">
 				        <a href="index.html"><img src="img/iugale.png" alt="" title="" height="75" width="75" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
@@ -187,7 +187,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>			
-			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCz279BMoELMjiBImzJZVz2JsnMffK9GQ0"></script>
   			<script src="js/easing.min.js"></script>			
 			<script src="js/hoverIntent.js"></script>
 			<script src="js/superfish.min.js"></script>	
