--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 							<form class="form-wrap" action="mail.php">
 								<h4 class="text-white pb-20">Request a Quote</h4>
 								<div class="form-select" id="service-select">
+									<select>
 										<option value="" disabled selected>Select Type of Service</option>
 										<option value="Software Development">Software Development</option>
 										<option value="Sales">Sales</option>
@@ -149,6 +150,7 @@
 										<option value="Advertising">Advertising</option>
 										<option value="Market Research">Market Research</option>
 										<option value="Other">Other</option>
+									</select>
 								</div>								
 								<input type="text" class="form-control" placeholder="name">
 								<input type="phone" class="form-control" placeholder="Phone Number">
