--- a/services.html
+++ b/services.html
@@ -86,9 +86,9 @@
 						<div class="col-lg-4">
 							<div class="single-service">
 								<div class="thumb">
-									<a href="services2.html"><img src="img/s1.jpg" alt=""></a>									
+									<a href="./software.html"><img src="img/s1.jpg" alt=""></a>									
 								</div>
-								<a href="services2.html">	<h4>Automotive Engineering</h4></a>
+								<a href="./software.html">	<h4>Automotive Engineering</h4></a>
 								<p>
 									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
 								</p>
@@ -97,9 +97,9 @@
 						<div class="col-lg-4">
 							<div class="single-service">
 								<div class="thumb">
-									<a href="services2.html"><img src="img/s2.jpg" alt=""></a>	
+									<a href="./software.html"><img src="img/s2.jpg" alt=""></a>	
 								</div>
-								<a href="services2.html">	<h4>Construction & Engineering</h4></a>
+								<a href="./software.html">	<h4>Construction & Engineering</h4></a>
 								<p>
 									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
 								</p>
@@ -108,9 +108,9 @@
 						<div class="col-lg-4">
 							<div class="single-service">
 								<div class="thumb">
-									<a href="services2.html"><img src="img/s3.jpg" alt=""></a>								
+									<a href="software.html"><img src="img/s3.jpg" alt=""></a>								
 								</div>
-								<a href="services2.html">		<h4>Industrial Engineering</h4></a>
+								<a href="software.html"><h4>Industrial Engineering</h4></a>
 								<p>
 									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
 								</p>
