--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 										<option value="Other">Other</option>
 									</select>
 								</div>								
-								<input type="text" class="form-control" placeholder="name">
+								<input type="text" class="form-control" placeholder="Name">
 								<input type="phone" class="form-control" placeholder="Phone Number">
 								<input type="email" class="form-control" placeholder="Email Address">
 								<textarea name="message" id="" cols="30" rows="5" placeholder="Message" class="form-control"></textarea>
