--- a/about.html
+++ b/about.html
@@ -40,6 +40,18 @@
 	  }
 	  
 	}
+	function validatequote() {
+  var a = document.forms["quote"]["type"].value;
+	var b = document.forms["quote"]["name"].value;
+	var c = document.forms["quote"]["phone"].value;
+	var d = document.forms["quote"]["message"].value;
+	var e = document.forms["quote"]["email"].value;
+  if (a == "" || b == "" || c == "" || d == "" || e == "" ) {
+		alert("Values cannot be empty");
+		window.location.href='index.php';
+  }
+ 
+}
 	</script>
 		</head>
 		<body>	
@@ -80,47 +92,47 @@
 			</section>
 			<!-- End banner Area -->	
 
-			<!-- Start home-about Area -->
-			<section class="home-about-area section-gap aboutus-about" id="about">
-				<div class="container">
-					<div class="row justify-content-center align-items-center">
-						<div class="col-lg-8 col-md-12 home-about-left">
-							<h6>Brand new app to blow your mind</h6>
-							<h1>
-								We’ve made a life <br>
-								that will change you
-							</h1>
-							<p class="sub">We are here to listen from you deliver exellence</p>
-							<p class="pb-20">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
-							</p>
-							<a class="primary-btn" href="contact.html">Get Started Now</a>
+				<!-- Start home-about Area -->
+				<section class="home-about-area section-gap" id="about">
+					<div class="container">
+						<div class="row justify-content-center align-items-center">
+							<div class="col-lg-8 col-md-12 home-about-left">
+								<h6>Brand new app to blow your mind</h6>
+								<h1>
+									We’ve made a life <br>
+									that will change you
+								</h1>
+								<p class="sub">We are here to listen from you deliver exellence</p>
+								<p class="pb-20">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
+								</p>
+								<a class="primary-btn" href="contact.html">Get Started Now</a>
+							</div>
+							<div class="col-lg-4 col-md-12 home-about-right relative">
+							<form class="form-wrap" name='quote' id='quote' method='post'action="quote.php">
+									<h4 class="text-white pb-20">Request a Quote</h4>
+									<div class="form-select" id="service-select">
+										<select name='type' id='type'>
+											<option value="" disabled selected>Select Type of Service</option>
+											<option value="Software Development">Software Development</option>
+											<option value="Sales">Sales</option>
+											<option value="Marketing">Marketing</option>
+											<option value="Advertising">Advertising</option>
+											<option value="Market Research">Market Research</option>
+											<option value="Other">Other</option>
+										</select>
+									</div>								
+									<input type="text" name='name' id='name' class="form-control" placeholder="Name">
+									<input type="phone" name='phone' id='phone' class="form-control" placeholder="Phone Number">
+									<input type="email" name='email' id='email' class="form-control" placeholder="Email Address">
+									<textarea name="message" id="" cols="30" rows="5" placeholder="Message" class="form-control"></textarea>
+									<button class="primary-btn" onclick="validatequote();">Request Free Quote</button>
+								</form>
+							</div>
 						</div>
-						<div class="col-lg-4 col-md-12 home-about-right relative">
-							<form class="form-wrap" name='quote' method='post'action="quote.php">
-								<h4 class="text-white pb-20">Request a Quote</h4>
-								<div class="form-select" id="service-select">
-									<select name='type' id='type'>
-										<option value="" disabled selected>Select Type of Service</option>
-										<option value="Software Development">Software Development</option>
-										<option value="Sales">Sales</option>
-										<option value="Marketing">Marketing</option>
-										<option value="Advertising">Advertising</option>
-										<option value="Market Research">Market Research</option>
-										<option value="Other">Other</option>
-									</select>
-								</div>								
-								<input type="text" name='name' id='name' class="form-control" placeholder="Name">
-								<input type="phone" name='phone' id='phone' class="form-control" placeholder="Phone Number">
-								<input type="email" name='email' id='email' class="form-control" placeholder="Email Address">
-								<textarea name="message" id="" cols="30" rows="5" placeholder="Message" class="form-control"></textarea>
-								<button class="primary-btn">Request Free Quote</button>
-							</form>
-						</div>
-					</div>
-				</div>	
-			</section>
-			<!-- End home-about Area -->
+					</div>	
+				</section>
+				<!-- End home-about Area -->
 				
 		
 			
