--- a/contact.html
+++ b/contact.html
@@ -59,16 +59,16 @@
 						<div class="container main-menu">
 							<div class="row align-items-center justify-content-between d-flex">
 							  <div id="logo">
-								<a href="index.html"><img src="img/iugale.png" alt="" title="" height="75" width="75" /></a>
+								<a href="index.php"><img src="img/iugale.png" alt="" title="" height="75" width="75" /></a>
 							  </div>
 							  <nav id="nav-menu-container">
 								<ul class="nav-menu">
 									<li class="menu-active"><a href="index.php">Home</a></li>
-									<li><a href="about.html">About</a></li>
-								
-									<li><a href="projects.php">Projects</a></li>
-									<li> <a href="services.html">Services</a></li>	
-									<li><a href="contact.html">Contact</a></li>
+								<li><a href="about.html">About</a></li>		
+					  <li> <a href="services.html">Services</a></li>
+					  <li><a href="projects.php">Projects</a></li>	
+					  <li><a href="contact.html">Contact</a></li>
+					  <li> <a href="./careers/">Careers</a></li>
 								   
 								  </ul>
 							  </nav><!-- #nav-menu-container -->		    		
@@ -85,7 +85,7 @@
 							<h1 class="text-white">
 								Contact Us				
 							</h1>	
-							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="contact.html"> Contact Us</a></p>
+							<p class="text-white link-nav"><a href="index.php">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="contact.html"> Contact Us</a></p>
 						</div>	
 					</div>
 				</div>
